@@ -37,7 +37,7 @@ AC_SUBST(PERL)
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(stdint.h)
+AC_CHECK_HEADERS(stdint.h strings.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
