@@ -29,6 +29,9 @@
 #include <stddef.h>
 #include <stdio.h>
 #include <string.h>
+#ifdef HAVE_STRINGS_H
+#include <strings.h>		/* Needed for strcasecmp() on QNX6 */
+#endif				/* #ifdef HAVE_STRINGS_H */
 
 #ifdef HAVE_GCRYPT_H
 #include <gcrypt.h>
